# ton-http-api-cpp

./: .clang-format  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  ansible.cfg  deploy-docker.yaml  deploy-http-api.yaml  deploy-systemd.yaml  docker-compose.env-vars.yaml  docker-compose.yaml
.github/workflows/: build-docker.yaml  build.yaml
ansible/: api.service.j2  config_vars.yaml.j2  healthcheck.service.j2  healthcheck.timer.j2  inventory.yaml  vars.json
config/: config_vars.yaml  static_config.yaml
examples/: README.md  callback.cpp  json.cpp  promise.cpp  promise_function_req.cpp
patches/: ton_001.patch  userver_001.patch
playground/: CMakeLists.txt  header.h  playground.cpp  schema_with_tuple.cpp  schemas_1.cpp  templates_1.cpp  test_schema_with_tuple.yaml  test_schemas_1.yaml  wallets_1.cpp
py/: tonlib_multiclient.cpp
scripts/: entrypoint.sh
tests/: conftest.py  test_005_get_address_information.py  test_006_get_extended_address_information.py  test_007_get_wallet_information.py  test_013_get_shard_block_proof.py
tests/accounts/: test_001_get_address_information.py  test_002_get_extended_address_information.py  test_003_get_wallet_information.py  test_004_get_address_balance.py  test_005_get_address_state.py  test_006_get_token_data.py
tests/blocks/: test_001_get_masterchainInfo.py  test_002_get_masterchain_block_signatures.py  test_003_get_shard_block_proof.py  test_004_get_consensus_block.py
tests/runmethod/: test_001_rungetmethod.py
tests/utils/: test_001_detect_address.py  test_002_detect_hash.py  test_003_pack_address.py  test_004_unpack_address.py
ton-http-api/: CMakeLists.txt  tonlib_postprocessor.cpp  tonlib_worker.cpp  tonlib_worker.h  utils.cpp  utils.hpp
ton-http-api/schemas/: v2.json  v2.yaml
ton-http-api/src/: main.cpp  version.h.in
ton-http-api/src/components/: TonlibComponent.cpp  TonlibComponent.h  tonlib_component.cpp  tonlib_component.h
ton-http-api/src/converters/: accounts.hpp  blocks.hpp  common.hpp  config.hpp  convert.hpp  runmethod.hpp  send.hpp  transactions.hpp  utils.hpp
ton-http-api/src/core/: tonlib_worker.cpp  tonlib_worker.h  tonlib_worker_accounts.cpp  tonlib_worker_blocks.cpp  tonlib_worker_config.cpp  tonlib_worker_dns.cpp  tonlib_worker_send.cpp  tonlib_worker_tokens.cpp  tonlib_worker_transactions.cpp  tonlib_worker_utils.cpp  types.hpp
ton-http-api/src/core/tlb/: tokens-tlb.cpp  tokens-tlb.h
ton-http-api/src/handlers/: HandlerDetectAddress.cpp  HandlerDetectAddress.h  HandlerGetMasterchainInfo.cpp  HandlerGetMasterchainInfo.h  JsonRpcHandler.cpp  JsonRpcHandler.h  JsonRpcMiddleware.hpp  TonlibRequestHandler.cpp  TonlibRequestHandler.h
ton-http-api/src/handlers/accounts/: DnsResolveHandler.cpp  DnsResolveHandler.h  GetAddressBalanceHandler.cpp  GetAddressBalanceHandler.h  GetAddressInformationHandler.cpp  GetAddressInformationHandler.h  GetAddressStateHandler.cpp  GetAddressStateHandler.h  GetExtendedAddressInformationHandler.cpp  GetExtendedAddressInformationHandler.h  GetShardAccountCellHandler.cpp  GetShardAccountCellHandler.h  GetTokenDataHandler.cpp  GetTokenDataHandler.h  GetWalletInformationHandler.cpp  GetWalletInformationHandler.h
ton-http-api/src/handlers/blocks/: GetBlockHeaderHandler.cpp  GetBlockHeaderHandler.h  GetConsensusBlockHandler.cpp  GetConsensusBlockHandler.h  GetMasterchainBlockSignaturesHandler.cpp  GetMasterchainBlockSignaturesHandler.h  GetMasterchainInfoHandler.cpp  GetMasterchainInfoHandler.h  GetOutMsgQueueSizeHandler.cpp  GetOutMsgQueueSizeHandler.h  GetShardBlockProofHandler.cpp  GetShardBlockProofHandler.h  GetShardsHandler.cpp  GetShardsHandler.h  LookupBlockHandler.cpp  LookupBlockHandler.h
ton-http-api/src/handlers/config/: GetConfigAllHandler.cpp  GetConfigAllHandler.h  GetConfigParamHandler.cpp  GetConfigParamHandler.h  GetLibrariesHandler.cpp  GetLibrariesHandler.h
ton-http-api/src/handlers/runmethod/: RunGetMethodHandler.cpp  RunGetMethodHandler.h  RunGetMethodStdHandler.cpp  RunGetMethodStdHandler.h
ton-http-api/src/handlers/send/: EstimateFeeHandler.cpp  EstimateFeeHandler.h  SendBocHandler.cpp  SendBocHandler.h  SendBocReturnHashHandler.cpp  SendBocReturnHashHandler.h
ton-http-api/src/handlers/transactions/: GetBlockTransactionsExtHandler.cpp  GetBlockTransactionsExtHandler.h  GetBlockTransactionsHandler.cpp  GetBlockTransactionsHandler.h  GetTransactionsHandler.cpp  GetTransactionsHandler.h  GetTransactionsStdHandler.cpp  GetTransactionsStdHandler.h  TryLocateResultTxHandler.cpp  TryLocateResultTxHandler.h  TryLocateSourceTxHandler.cpp  TryLocateSourceTxHandler.h
ton-http-api/src/handlers/utils/: DetectAddressHandler.cpp  DetectAddressHandler.h  DetectHashHandler.cpp  DetectHashHandler.h  PackAddressHandler.cpp  PackAddressHandler.h  UnpackAddressHandler.cpp  UnpackAddressHandler.h
ton-http-api/src/middleware/: VersionHeaderMiddleware.cpp  VersionHeaderMiddleware.h
ton-http-api/src/schemas/: v2.cpp  v2.hpp  v2_fwd.hpp  v2_parsers.ipp
ton-http-api/src/userver/chaotic/io/: bool.cpp  bool.hpp
ton-http-api/src/userver/chaotic/io/std/: int32_t.cpp  int32_t.hpp  int64_t.cpp  int64_t.hpp  uint32_t.cpp  uint32_t.hpp  uint64_t.cpp  uint64_t.hpp
ton-http-api/src/userver/chaotic/io/ton_http/types/: bytes.cpp  bytes.hpp  int256.cpp  int256.hpp  shard_id.cpp  shard_id.hpp  ton_addr.cpp  ton_addr.hpp  ton_addr_without_workchain.cpp  ton_addr_without_workchain.hpp  ton_hash.cpp  ton_hash.hpp  ton_hash_hex.cpp  ton_hash_hex.hpp
ton-http-api/src/utils/: address.hpp  common.cpp  common.hpp  exceptions.hpp  suspended.hpp  wallets.hpp
ton-http-api/static/: 404.json  index.html  openapi.json
tonlib-multiclient/: CMakeLists.txt  client_wrapper.cpp  client_wrapper.h  multi_client.cpp  multi_client.h  multi_client_actor.cpp  multi_client_actor.h  request.h  response_callback.h  session.h
